add chart colors

--- a/DayDayUp/App.xaml
+++ b/DayDayUp/App.xaml
@@ -43,9 +43,16 @@
                     <Thickness x:Key="ControlBorderThemeThickness">0</Thickness>
                     <Thickness x:Key="HighContrastThicknessTop">0,0,0,0</Thickness>
                     <x:Double x:Key="HighContrastStrokeThickness">0</x:Double>
+                    <Color x:Key="ColumnSeriesColor">#fae3d9</Color>
+                    <Color x:Key="LineSeriesColor">#bbded6</Color>
+                    <Color x:Key="PieChartColor0">#515bd4</Color>
+                    <Color x:Key="PieChartColor1">#dd2a7b</Color>
+                    <Color x:Key="PieChartColor2">#feda77</Color>
+                    <Color x:Key="PieChartColor3">#8134af</Color>
                     <Color x:Key="AltHighColor">#FF000000</Color>
                     <Color x:Key="ChromeMediumLowColor">#FF2B2B2B</Color>
                     <Color x:Key="OperatorPanelScrollButtonBackgroundColor">#FF858585</Color>
+                    <Color x:Key="NameTextBrush">#FF858585</Color>
                     <SolidColorBrush x:Key="SystemControlBackgroundAltHighBrush"
                                      Color="{StaticResource AltHighColor}" />
                     <SolidColorBrush x:Key="SystemControlBackgroundChromeMediumLowBrush"
@@ -61,9 +68,16 @@
                     <Thickness x:Key="ControlBorderThemeThickness">0</Thickness>
                     <Thickness x:Key="HighContrastThicknessTop">0,0,0,0</Thickness>
                     <x:Double x:Key="HighContrastStrokeThickness">0</x:Double>
+                    <Color x:Key="ColumnSeriesColor">#ffb6b9</Color>
+                    <Color x:Key="LineSeriesColor">#8ac6d1</Color>
+                    <Color x:Key="PieChartColor0">#515bd4</Color>
+                    <Color x:Key="PieChartColor1">#dd2a7b</Color>
+                    <Color x:Key="PieChartColor2">#feda77</Color>
+                    <Color x:Key="PieChartColor3">#8134af</Color>
                     <Color x:Key="AltHighColor">#FFF2F2F2</Color>
                     <Color x:Key="ChromeMediumLowColor">#FFE0E0E0</Color>
                     <Color x:Key="OperatorPanelScrollButtonBackgroundColor">#FF858585</Color>
+                    <Color x:Key="NameTextBrush">#FF858585</Color>
                     <SolidColorBrush x:Key="SystemControlBackgroundAltHighBrush"
                                      Color="{StaticResource SystemAltHighColor}" />
                     <SolidColorBrush x:Key="SystemControlBackgroundChromeMediumLowBrush"
